# polynomial_ops

./: .gitignore  Cargo.toml
src/: array_polynomial.rs  chebyshev_polynomial.rs  lib.rs  mul_polynomial.rs  plot.rs  polynomial.rs  polynomial_nd.rs  product_polynomial.rs
