[package]
name = "polynomial_ops"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Multivariable polynomial operations on arrays and vectors"
repository = "https://github.com/sigurd4/polynomial_ops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"

sized_const = "0.1.0"

num-traits = "0.2.16"
num_identities_const = "0.1.0"

currying = "0.2.1"

array_trait = "0.6.16"

[dev-dependencies]
plotters = "0.3.5"
linspace = "0.1.0"

[features]
default = ["std"]
std = []