[package]
name = "polynomial_ops"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Multivariable polynomial operations on arrays and vectors"
repository = "https://github.com/sigurd4/polynomial_ops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"

num-traits = "0.2.17"
num_identities_const = "0.1.0"

currying = "0.2.2"

array__ops = "0.1.1"

[dev-dependencies]
plotters = "0.3.5"
linspace = "0.1.1"

[features]
default = ["std"]
std = []